crates/alder-solve/tests/snapshots/inference__identity_function.snap
---
source: crates/alder-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (id)\n\nid x = x\n"
---
id : forall a. a -> a
