crates/alder-solve/tests/snapshots/inference__if_picks_branch_type.snap
---
source: crates/alder-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (pick)\n\npick b x y = if b then x else y\n"
---
pick : forall a. Bool -> a -> a -> a
