crates/alder-solve/tests/snapshots/inference__infinite_type.snap
---
source: crates/alder-solve/tests/inference.rs
description: "Code:\n\nmodule Main exposing (selfApply)\n\nselfApply f = f f\n"
---
[
    InfiniteType {
        region: Region {
            start: Position {
                line: 3,
                column: 11,
            },
            end: Position {
                line: 3,
                column: 12,
            },
        },
        name: "f",
        overall_type: Lambda(
            Infinite,
            FlexVar(
                "a",
            ),
            [],
        ),
    },
]
