crates/alder-solve/tests/snapshots/inference__local_let_bindings_remain_monomorphic.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn invalid() {\n    let identity = (value) -> { value }\n    let number = identity(1)\n    identity(\"text\")\n}\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 4,
                column: 14,
            },
            end: Position {
                line: 4,
                column: 20,
            },
        },
        kind: Mismatch {
            actual: Named(
                "String",
            ),
            expected: Named(
                "Number",
            ),
        },
    },
]
