crates/alder-solve/tests/snapshots/inference__mismatch_reports_new_type_syntax.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn bad() Number { \"nope\" }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 27,
            },
        },
        kind: Mismatch {
            actual: Named(
                "String",
            ),
            expected: Named(
                "Number",
            ),
        },
    },
]
