crates/alder-solve/tests/snapshots/inference__mutable_loop_and_assignment.snap
---
source: crates/alder-solve/tests/inference.rs
description: "fn sum(values: Array[Number]) Number {\n    let total = 0\n    for value in values {\n        total += value\n    }\n    total\n}\n"
---
sum: fn(Array[Number]) Number
